--- a/app/views/shared/_ml_list.html.haml
+++ b/app/views/shared/_ml_list.html.haml
@@ -22,7 +22,7 @@
           %span
             %br/
             .small
-              =l.email
+              =l.redirection_alias
               =l.description
               %span.fr
                 Inscriptions
