--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -42,3 +42,8 @@
         %i.zmdi.zmdi-key
         %div.small-inbl
           Domaines
+    - if can? :read, :email
+      =link_to  admin_search_email_path, class:'box box-light shadow-1 mtm bouton bouton-light'  do
+        %i.zmdi.zmdi-search
+        %div.small-inbl
+          Recherche par email
