--- a/app/views/aliases/_form.html.haml
+++ b/app/views/aliases/_form.html.haml
@@ -6,5 +6,6 @@
     -#= f.input :email_virtual_domain_id
     = f.association :email_virtual_domain, collection: @evd
     = f.input :redirect
+    = f.association :ml_list, collection: @ml
   .form-actions
     = f.button :submit
