--- a/app/views/email_validation_mailer/notice_google_apps.html.haml
+++ b/app/views/email_validation_mailer/notice_google_apps.html.haml
@@ -6,4 +6,26 @@
 
       %p Sal's #{@user.firstname},
       %p
-        Ton compte Google Apps @gadz.org vient d'être créé ! C'EST LA FÊTE !
+        Ton compte G Suite for Gadz.org vient d’être activé. Il te permet d’accéder à l’ensemble des outils Google de la suite mise à disposition de l’association, et notamment à ta boite mail
+        %b=@user.primary_email
+        \.
+
+      %p
+        Tu peux t'y connecter dès maintenant grace à l'identifiant suivant et ton
+        %b
+          mot de passe Gadz.org
+        \:
+
+      .txtcenter.pam.big= @user.primary_email
+
+      .txtcenter.bouton.bouton_bleu
+        =link_to "Me connecter à ma boite mail G Suite", "https://accounts.google.com/ServiceLogin?service=mail" ,:class => "bouton bouton_orange_1 txtcenter"
+
+      %p
+        Tu peux accéder directement à tes mails sur cette adresse : <a href="https://mail.gadz.org" class="light">https://mail.gadz.org</a>
+
+      %p
+        Pense aussi à jeter un oeil à
+        =link_to "la liste des outils Google", "https://www.google.fr/intl/fr/about/products/",:class => "light"
+        utilisables grace à ton compte G Suite et à cette
+        =link_to "aide rédigée par la communauté","https://confluence.gadz.org/display/AIDE/La+suite+Google+Application+pour+Gadz.org",:class => "light"
