improve list getter

--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -35,9 +35,9 @@
       -when "open"
         N'importe qui peut écrire sur cette liste
       -when "closed"
-        Suel les membres de la liste peuvent envoyer librement des mails, les extérieurs sont refusés
+        Seul les membres de la liste peuvent envoyer librement des mails, les extérieurs sont refusés
       -when "moderated"
-        Tous les messages envoyés à la liste son soumis à moderation
+        Tous les messages envoyés à la liste sont soumis à moderation
 
   %p
     %b Inscriptions :
@@ -47,7 +47,7 @@
         Tous les Gadzarts ou Sociétaires peuvent s'inscrire
       -when "conditional_gadz"
         Seuls les Gadzarts peuvent s'inscrire
-      -when "cloed"
+      -when "closed"
         Les inscriptions à cette liste ne sont possible que pour un administrateur
       -when "in_group"
         Seuls les membres du groupe
