improve ML UI 2

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -258,7 +258,7 @@ a:focus {
 
 .box{
      border-radius: 2px;
-     overflow: hidden;
+     //overflow: hidden;
  }
 
 .box-grey{background: #f7f7f7;}
