--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -107,7 +107,7 @@
           .box.box-light.shadow-1.mtm
             .box-top.box-top-light.pam
               Ajouter un membre
-            .box-bottom.mrm.mlm
+            .box-bottom.pam
               %h4 Ajouter un membre
               TODO
               %h4 Ajouter une adresse
