--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -1,7 +1,7 @@
 %html
   %head
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    %title Rails.application.secrets.app_name
+    %title=Rails.application.secrets.app_name
     = csrf_meta_tags
     = stylesheet_link_tag    "application", media: "all"
     = javascript_include_tag :application
