--- a/app/views/aliases/show.html.haml
+++ b/app/views/aliases/show.html.haml
@@ -16,6 +16,6 @@
     %b Pas de liste de diffusion
 
 
-= link_to 'Edit', edit_alias_path(@alias)
+= link_to 'Editer', edit_alias_path(@alias)
 \|
-= link_to 'Back', aliases_path
+= link_to 'Retour à la recherche', aliases_path(search: @search)
