--- a/app/views/aliases/new.html.haml
+++ b/app/views/aliases/new.html.haml
@@ -1,5 +1,5 @@
 %h1 New alias
 
-= render 'form'
+= render partial: 'form', locals:{search: @search}
 
-= link_to 'Back', aliases_path
+= link_to 'Retour à la recherche', aliases_path(search: @search)
