add link to gaccount in user#show

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,21 +9,28 @@
         = link_to 'Emails', dashboard_user_path(@user), class:"button fr button-primary box mrm"
         = link_to 'Mainlinglists', dashboard_ml_user_path(@user), class:"button fr button-primary box mrm"
     .box-bottom.pam
-      .fr
-        #info-tech.pam.mam.box.box-light.bggrey
-          %h1= t('users.forms.titles.infos_sync')
-          - %w(hruid last_gram_sync_at).each do |attribute|
+      .grid-2
+        #info-perso
+          - %w(firstname lastname email).each do |attribute|
             =display_attribute(@user, attribute)
-          -if can?(:sync, @user) && @user.syncable?
-            -if @user.next_sync_allowed_at <= Time.now
-              = link_to t('users.forms.buttons.sync_now'), sync_user_path, class:"button fr button-primary"
-            -else
-              .button.button-primary.fr= t('users.forms.buttons.syncable_in_x', count:(@user.next_sync_allowed_at-Time.now).round)
-        -if can? :read, :admin
-          #info-tech.pam.mam.box.box-light.bggrey
-            %h1= t('users.forms.titles.infos_tech')
-            - %w(role sign_in_count last_sign_in_at created_at updated_at).each do |attribute|
+          -if can? :read, :admin
+            %p
+              %b uuid :
+              =@user.uuid
+            = link_to 'Voir sur moncompte.gadz.org', "#{Configurable[:moncompte_url]}admin/info_user?uuid=#{@user.uuid}", target: "_blank"
+        #info-tech
+          .pam.mam.box.box-light.bggrey
+            %h1= t('users.forms.titles.infos_sync')
+            - %w(hruid last_gram_sync_at).each do |attribute|
               =display_attribute(@user, attribute)
-      #info-perso
-        - %w(firstname lastname email).each do |attribute|
-          =display_attribute(@user, attribute)
+            -if can?(:sync, @user) && @user.syncable?
+              -if @user.next_sync_allowed_at <= Time.now
+                = link_to t('users.forms.buttons.sync_now'), sync_user_path, class:"button button-primary"
+              -else
+                .button.button-primary= t('users.forms.buttons.syncable_in_x', count:(@user.next_sync_allowed_at-Time.now).round)
+          -if can? :read, :admin
+            #info-tech.pam.mam.box.box-light.bggrey
+              %h1= t('users.forms.titles.infos_tech')
+              - %w(role sign_in_count last_sign_in_at created_at updated_at).each do |attribute|
+                =display_attribute(@user, attribute)
+
