GORGMAIL-47 - Rémanence adresse mail sur le champ adresse à créer

--- a/app/views/email_redirect_accounts/create.js.erb
+++ b/app/views/email_redirect_accounts/create.js.erb
@@ -1,2 +1,3 @@
 UnobtrusiveFlash.showFlashFromCookies();
-$("#redirect").html("<%= escape_javascript(render partial: 'shared/er_list', locals: {has_google_apps: @has_google_apps, emails_redirect: @emails_redirect} ) %>"); 
+$("#redirect").html("<%= escape_javascript(render partial: 'shared/er_list', locals: {has_google_apps: @has_google_apps, emails_redirect: @emails_redirect} ) %>");
+$('input#email_redirect_account_redirect')[0].value="";
