--- a/app/views/email_source_accounts/create.js.erb
+++ b/app/views/email_source_accounts/create.js.erb
@@ -1,1 +1,2 @@
-$("#source").html("<%= escape_javascript(render partial: 'shared/es_list', locals: {emails_source: @emails_source} ) %>"); 
+$("#source").html("<%= escape_javascript(render partial: 'shared/es_list', locals: {emails_source: @emails_source} ) %>");
+$('input#email_source_account_email')[0].value="";
