--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -62,6 +62,9 @@
         %p
           %b Id Google :
           =@ml_list.email
+          (
+          =link_to "Sync", ml_list_sync_with_google_path(@ml_list)
+          )
         %p
           %b Alias de redirection zenimel:
           -@redirection_aliases.each do |r|
