--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -12,15 +12,17 @@
             =render partial: "shared/es_list", locals: {emails_source: @emails_source}
 
           -if can? :create, @new_esa
-            .fr.pam
+            .pam
               =form_for  [@user,@new_esa], :remote=>true  do |f|
-                .group.group-m-form
-                  =f.text_field :email, :size => 10
+                .group.group-m-form.w100{style: "margin-bottom: 0px;"}
+                  =f.text_field :email, required: "required", class: "w100"
                   .span.highlight
                   .span.bar
                   =f.label "email"
-                  =f.select :email_virtual_domain_id,EmailVirtualDomain.all.map { |e| [e.name,e.id] }
-                  =f.submit '+ Ajouter',:class => "bouton bouton_bleu"
+                .pam
+                  =f.select :email_virtual_domain_id,EmailVirtualDomain.all.map { |e| [e.name,e.id] },{}, class:'w100'
+                .pam
+                  =f.submit '+ Ajouter',:class => "bouton bouton_bleu fr bl"
 
 
     .ma1.small-hidden
@@ -37,11 +39,11 @@
 
           .pam
             =form_for  [@user,@new_era], :remote=>true  do |f|
-              .fl.group.group-m-form
-                =f.email_field :redirect, :size => 15
+              .group.group-m-form.w100{style: "margin-bottom: 0px;"}
+                =f.email_field :redirect, required: "required", class: "w100"
                 .span.highlight.w100
                 .span.bar.w100
-                =label_tag "email@domaine.fr"
-              .fr.plm.plr
-                =f.submit '+ Ajouter',:class => "bouton bouton_bleu", id: :new_email_redirect_account_submit
+                =label_tag "Ajouter une adresse"
+              .pam
+                =f.submit '+ Ajouter',:class => "bouton bouton_bleu fr bl", id: :new_email_redirect_account_submit
 =javascript_include_tag 'email_redirect_tracking.js' if google_analytics_id
