fix moderation button for list modo

--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -31,7 +31,7 @@
             Seul les membres de la liste peuvent envoyer librement des mails, les extérieurs sont refusés
           -when "moderated"
             Tous les messages envoyés à la liste sont soumis à modération
-            -if can? :manage, Ml::List
+            -if can? :moderate_messages, Ml::List
               =link_to "Voir les messages en modération",@ml_list.moderation_link, target: "_blank", :class =>"bouton-medium bouton_bleu"
 
       %p
