Update slack chat

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,12 +2,16 @@
   %head
     <meta name="viewport" content="width=device-width, initial-scale=1">
     %title= Rails.application.secrets.app_name
+    = Gon::Base.render_data
     = csrf_meta_tags
     = stylesheet_link_tag    "application", media: "all"
     = javascript_include_tag :application
     -if slack_chat?
+      =javascript_include_tag 'pnglib.js'
+      =javascript_include_tag 'identicon.js'
       =javascript_include_tag 'slack-chat.min.js'
       =javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js'
+      =javascript_include_tag 'slack-chat-caller.js'
       =stylesheet_link_tag "slack-chat.css"
       =stylesheet_link_tag "slack-chat-custom.css"
 
