--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -105,14 +105,14 @@
 
     .member_block.flex-item-double
       =render partial: "shared/ml_members", locals: {members: @members, external_emails: @external_emails}
-      - if can? :manage, Ml::List
+      - if can? :admin_members, Ml::List
         .grid.mbmdorian
           .box.box-light.shadow-1.mtm
             .box-top.box-top-light.pam
               Ajouter un membre
             .box-bottom.pam
-              %h4 Ajouter un membre
-              TODO
+              -#%h4 Ajouter un membre
+              -#TODO
               %h4 Ajouter une adresse
 
               %p
