--- a/app/views/shared/_ml_members_list.html.haml
+++ b/app/views/shared/_ml_members_list.html.haml
@@ -9,7 +9,7 @@
       %li
         %b=link_to m[1], user_path(m[0])
         %span.red=Ml::ListsUser.roles_list[m[3]].gsub("member","").capitalize
-        -if can?( :manage, @ml_list)
+        -if can?( :admin_members, @ml_list)
           =m[2]
           .fr
             .dropdown
