--- a/app/views/layouts/_user_widget.html.haml
+++ b/app/views/layouts/_user_widget.html.haml
@@ -9,7 +9,10 @@
       .menu-item-drop
         =link_to t('layout.menu.profile'), user_path(current_user), class: "menu-a-drop"
       .menu-item-drop
-        =link_to t('layout.menu.disconnect'), destroy_user_session_path, :method => :delete, class: "menu-a-drop"
+        - if user_masquerade?
+          = link_to t('layout.menu.reverse_masquerade'), back_masquerade_path(current_user)
+        -else
+          =link_to t('layout.menu.disconnect'), destroy_user_session_path, :method => :delete
 - else
   .menu-item.with_button>
     = link_to t('layout.menu.connect'), new_user_session_path, :class =>"bouton bouton_bleu"
